Added the start of collision detection (+ point of collision)

--- a/Code/vkcube.vcxproj
+++ b/Code/vkcube.vcxproj
@@ -87,6 +87,8 @@
   <ItemGroup>
     <ClCompile Include="BufferCPU.cpp" />
     <ClCompile Include="BufferGPU.cpp" />
+    <ClCompile Include="Collisions.cpp" />
+    <ClCompile Include="Collisions.h" />
     <ClCompile Include="Cuboid.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Main.cpp" />
