Fixed issue with how VS treated Collisions.h. Added constant forces.
Collisions.h was being treated as a CPP file, which lead to inconsistent linker errors. This has been fixed. Constant forces added to the rigidbody, meaning those aren't cleared every frame.

--- a/Code/vkcube.vcxproj.filters
+++ b/Code/vkcube.vcxproj.filters
@@ -67,9 +67,6 @@
     <ClCompile Include="Demo.cpp">
       <Filter>Vulkan Files</Filter>
     </ClCompile>
-    <ClCompile Include="Collisions.h">
-      <Filter>Managers\Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="Collisions.cpp">
       <Filter>Managers\Source Files</Filter>
     </ClCompile>
@@ -143,6 +140,9 @@
     </ClInclude>
     <ClInclude Include="Demo.h">
       <Filter>Vulkan Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Collisions.h">
+      <Filter>Managers\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
