--- a/Code/vkcube.vcxproj
+++ b/Code/vkcube.vcxproj
@@ -94,7 +94,7 @@
     <ClCompile Include="BufferCPU.cpp" />
     <ClCompile Include="BufferGPU.cpp" />
     <ClCompile Include="Collisions.cpp" />
-    <ClCompile Include="Collisions.h" />
+    <ClInclude Include="Collisions.h" />
     <ClCompile Include="Cuboid.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Main.cpp" />
